--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
             
             <div class="journal-entry">
                 <div class="journal-date">Day 1 — First Steps</div>
-                <p>Starting my German journey today. The alphabet feels manageable, though those umlauts (Ä, Ö, Ü) will take practice. Memorized all personal pronouns and the conjugations for sein and haben. Wrote 110+ sentences today — my hand hurts but it feels good to drill until it's automatic. Tomorrow: regular verbs. Bis morgen!</p>
+                <p>Starting my German journey today. Bis morgen!</p>
             </div>
 
             <div class="journal-entry" style="opacity: 0.5;">
@@ -773,7 +773,7 @@
         <!-- ABOUT SECTION -->
         <div class="intro">
             <h3 style="font-family: 'Playfair Display', serif; font-size: 1.8rem; margin-bottom: 15px; color: var(--purple); font-weight: 700;">About This Journey</h3>
-            <p>I'm learning German intensively to prepare for a working holiday visa and potentially a PiA (Praxisintegrierte Ausbildung) program in Germany. My goal is to reach <strong>B2 level within 12-14 months</strong> through daily practice.</p>
+            <p>I'm learning German intensively to prepare for a working holiday visa in Germany. My goal is to reach <strong>B2 level within 12-14 months</strong> through daily practice.</p>
             <p>This website documents everything — lessons, exercises, reflections, struggles, and victories. If you're on a similar path, welcome!</p>
         </div>
 
